RESOLVED FIXED291110
Model element's entityTransform property setting fails for some valid values
https://bugs.webkit.org/show_bug.cgi?id=291110
Summary Model element's entityTransform property setting fails for some valid values
Ada Chan
Reported 2025-04-04 15:45:45 PDT
Model element's entityTransform property setting fails for some valid values
Attachments
Ada Chan
Comment 1 2025-04-04 15:45:46 PDT
Ada Chan
Comment 2 2025-04-04 15:54:23 PDT
EWS
Comment 3 2025-04-08 08:04:44 PDT
Committed 293418@main (00790bc28985): <https://commits.webkit.org/293418@main> Reviewed commits have been landed. Closing PR #43663 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.