Model element's entityTransform property setting fails for some valid values https://bugs.webkit.org/show_bug.cgi?id=291110 rdar://148495915

Reviewed by Mike Wyrzykowski.

Use a bigger tolerance for the comparisons made when
checking whether the transform matrix is valid, as there
could be precision loss in the matrix <-> SRT arithmetic.

* LayoutTests/model-element/model-element-entity-transform-expected.txt:
* LayoutTests/model-element/model-element-entity-transform.html:
* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:
(WebKit::ModelProcessModelPlayerProxy::transformSupported):

Canonical link: https://commits.webkit.org/293418@main