Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm
@@ -252,12 +252,24 @@ std::optional<SharedPreferencesForWebProcess> ModelProcessModelPlayerProxy::shar
     return std::nullopt;
 }
 
+static bool areSameSignAndAlmostEqual(float a, float b, float tolerance)
+{
+    if (a * b < 0)
+        return false;
+
+    float absA = std::abs(a);
+    float absB = std::abs(b);
+    return std::abs(absA - absB) < tolerance * std::min(absA, absB);
+}
+
 bool ModelProcessModelPlayerProxy::transformSupported(const simd_float4x4& transform)
 {
+    constexpr float tolerance = 1e-5f;
+
     RESRT srt = REMakeSRTFromMatrix(transform);
 
     // Scale must be uniform across all 3 axis
-    if (simd_reduce_max(srt.scale) - simd_reduce_min(srt.scale) > FLT_EPSILON) {
+    if (!areSameSignAndAlmostEqual(simd_reduce_max(srt.scale), simd_reduce_min(srt.scale), tolerance)) {
         RELEASE_LOG_ERROR(ModelElement, "Rejecting non-uniform scaling %.05f %.05f %.05f", srt.scale[0], srt.scale[1], srt.scale[2]);
         return false;
     }
@@ -265,7 +277,7 @@ bool ModelProcessModelPlayerProxy::transformSupported(const simd_float4x4& trans
     // Matrix must be a SRT (scale/rotation/translation) matrix - no shear.
     // RESRT itself is already clean of shear, so we just need to see if the input is the same as the cleaned RESRT
     simd_float4x4 noShearMatrix = RESRTMatrix(srt);
-    if (!simd_almost_equal_elements(transform, noShearMatrix, FLT_EPSILON)) {
+    if (!simd_almost_equal_elements(transform, noShearMatrix, tolerance)) {
         RELEASE_LOG_ERROR(ModelElement, "Rejecting shear matrix");
         return false;
     }
